asset/setyle.css
* {
  box-sizing: border-box;
}
:root {
  --transition: 0.25s;
}

html,
body {
  scroll-behavior: smooth;
}

html {
  font-size: 62.5%;
}

body {
  font-size: 1.6rem;
  font-family: "Poppins", sans-serif;
  background: #efefef;
}

/* commot */
a {
  text-decoration: none;
}

.container {
  width: 1140px;
  min-width: calc(100vh - 65px);
  margin-left: auto;
  margin-right: auto;
}

li .active {
  position: relative;
  font-weight: 500;
  font-size: 1.8rem;
  line-height: 1.5;
  color: #152427;
}

li .active::after {
  position: absolute;
  content: "";
  width: 16px;
  height: 2px;
  background: #143c3c;
  bottom: -25px;
  left: 16px;
}

.fiexd {
  position: sticky;
  top: -20px;
}

/* header  */

.header {
  z-index: 1;
  background: #efefef;
  font-family: "Public Sans";
}

.nav {
  padding: 28px 0 26px;
  display: flex;
  align-items: center;
}

.nav::after {
  position: absolute;
  content: "";
  height: 1px;
  width: 100%;
  background: linear-gradient(
    90deg,
    #ffffff 0%,
    #dddcdc 51.09%,
    rgba(213, 213, 213, 0) 99.68%
  );
  bottom: 0;
}

.nav__navbar {
  margin-left: auto;
}

.nav__navbar-ul {
  display: flex;
}

.nav__navbar-link {
  padding: 16px;
  margin: 0 4px;
  font-weight: 500;
  font-size: 1.8rem;
  line-height: 1.5;
  color: #575d5e;
}

.nav__navbar-link:hover {
  text-decoration: underline;
}

.btn {
  align-items: center;
  margin-left: 69px;
}

.btn-header {
  display: inline-block;
  text-align: center;
  padding: 15px 0;
  color: #fff;
  min-width: 173px;
  background: #143c3c;
  border: 1.5px solid #143c3c;
  border-radius: 40px;
  font-weight: 500;
  transition: var(--transition);
}

.btn-header:hover {
  background: transparent;
  color: #10375c;
}

/* hero  */
.hero__inner {
  padding: 52px 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-family: "Public Sans";
}

.hero__content {
  width: 35%;
}

.hero__heading {
  max-width: 368px;
  font-weight: 800;
  font-size: 5rem;
  line-height: 1.2;
  color: #152427;
}

.hero__desc {
  margin-top: 20px;
  font-weight: 500;
  font-size: 1.8rem;
  line-height: 1.5;
  color: #575d5e;
}

.hero-row {
  margin-top: 42px;
  display: flex;
  column-gap: 36px;
}

.hero-row__get-in {
  margin-left: -69px;
}

.hero-row__videos {
  display: flex;
  align-items: center;
  gap: 18px;
}

.hero-row__videos-border {
  position: relative;
  width: 44px;
  height: 44px;
  border-radius: 50%;
  background: #83a17d;
  display: flex;
  align-items: center;
  justify-content: center;
}

.hero-row__videos-border::before {
  position: absolute;
  content: "";
  width: 57px;
  height: 57px;
  border-radius: 50%;
  border: 5px solid #143c3c;
  clip-path: inset(0 50% 0 0);
}

.hero-row__videos-flay-videos {
  font-family: "Poppins";
  min-width: 118px;
  font-style: normal;
  font-weight: 600;
  font-size: 1.8rem;
  line-height: 1.75;
  color: #152427;
}

.hero__media {
  position: relative;
}

.hero__media::before {
  position: absolute;
  content: "";
  width: 348px;
  height: 340px;
  border-radius: 50%;
  background: #4dbb9a;
  filter: blur(137px);
  left: 115px;
  top: 110px;
}

.hero-img__avatar {
  position: relative;
  width: 202px;
  height: 466px;
  object-fit: cover;
  border-radius: 110px;
}

.hero-img__avatar:nth-child(2) {
  bottom: -137px;
  margin: 0 20px;
}

.hero-extra__hana-1 {
  position: absolute;
  top: -27px;
  left: -214px;
}

.hero-extra__hanabira-1 {
  position: absolute;
  top: -27px;
  left: -170px;
}

.hero-extra__hanabira-2 {
  position: absolute;
  transform: rotate(180deg);
  right: 70px;
  top: 287px;
}

.hero-extra__hana-2 {
  position: absolute;
  right: 25px;
  top: 567px;
}

/* brand  */
.brand {
  padding: 232px 0 106px;
}

.brand__inner {
  display: flex;
  align-items: center;
  justify-content: space-around;
  width: 100%;
  height: 201px;
  background: #e2eddf;
  border-radius: 100.5px;
}

.brand__iner-img {
  display: flex;
  gap: 11px;
}

/* service  */
.section-span {
  display: flex;
  align-items: center;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.62;
  color: #152427;
}

.section-span::before {
  display: inline-block;
  margin-right: 21px;
  content: "";
  width: 25px;
  height: 1px;
  background: #152427;
}

.service__content {
  margin-top: 12px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.section-heading {
  max-width: 520px;
  font-weight: 600;
  font-size: 4.2rem;
  line-height: 1.23;
  color: #152427;
}

.section-heading::after {
  display: inline-block;
  margin: 0 0 9px 19px;
  content: "";
  width: 66px;
  height: 2px;
  background: #152427;
}

.control {
  display: flex;
  gap: 17px;
}

.control-serivce {
    transition: var(--transition);
  display: flex;
  align-items: center;
  justify-content: center;
  width: 54px;
  height: 54px;
  border-radius: 50%;
  background: #e2eddf;s
}

.control-serivce__back {
  transform: rotate(180deg);
}

.control-serivce:hover {
background-color: #143C3C;
color: #fff;
}

.service__inner{
    margin-top: 76px;
    display: flex;
    gap: 16px;
}

.service-card{
    overflow: hidden;
    transition: var(--transition);
    border-radius: 20px;
}

.service-card:hover{
    background: #FFFFFF;
    box-shadow: -6px 9px 64px -4px rgba(118, 118, 118, 0.25);
}

.service-card__img{
    width: 368px;
    height: 318px;
    border-radius: 20px 20px 0px 0px;
    object-fit: cover;
    transition: var(--transition);
}
.service-card:hover .service-card__img{
    transform: scale(1.1);
}

.service-card__content{
    padding: 24px 0 23px 18px;
    transition: var(--transition);
}

.service-card__title{
    font-weight: 600;
    font-size: 2.2rem;
    line-height: 1;
    color: #152427;
}

.service-card__desc{
    margin-top: 18px;
    max-width: 268px;
    font-weight: 500;
    font-size: 1.4rem;
    line-height: 1.71;
    color: #7D8188;
}

/* about  */
.about{
    margin-top: 230px;
}

.about__inner{
    display: flex;
}
/* ... */

